IVYPORTAL-7318: Various or urgent requests in IVYPORTAL S173 - Fixed bug: Closed button of middle chart is not aligned , happen on portal 7.0

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4290,7 +4290,7 @@ a[id*=application-menu-item]>span.ui-menuitem-text {
 .dashboard-chart-panel .chart-actions-container {
   height: 25px;
   float: right;
-  flex: 1;
+  text-align: right;
 }
 
 .dashboard-chart-panel:hover .chart-actions-container .chart-action {
